cover-text-image

--- a/css/style.css
+++ b/css/style.css
@@ -6,21 +6,29 @@ header {
 }
 
 #hero-image{
-height: 600px;
+height: 1500px;
 width: 100%;
-background-image: url("http://notthetate.co.uk/stuartart/guidinglight.jpg")
-no-repeat center center;
-
+background: url("http://notthetate.co.uk/stuartart/guidinglight.jpg")
+no-repeat center center; 
 animation-name: hero-zoom;
 animation-duration: 5s;
 animation-fill-mode: forwards;
+background-size: cover;
 }
-.hero-outer{
-	height: 600px;
+h1{
+     letter-spacing: 4px;
+     color: black;
+}
+
+.cover-text, #hero-image{
+	 font-size: 100%;
+	 font-family: Noto Serif;
+	 color: #fff;
 	width: 100%;
-	overflow: hidden;
-position: relative
-}
-#hero-text, #hero image{
-    color: #ffffff
-}
+		height: 1000px;
+		padding-top: 40px;
+		padding-left: 10px;
+        padding-bottom: 40px;
+	 position: absolute;
+     float: left;
+ }
