--- a/css/style.css
+++ b/css/style.css
@@ -6,24 +6,27 @@ header {
 }
 #menu{
     float: left;
-    position: relative;
+    position: absolute;
     list-style-type: none;
+    font-size: 80%;
+    letter-spacing: 4px;
+    padding-top: 20px;
+	padding-left: 10px;
+    padding-bottom: 20px;
+    padding-right: 20px;
 }
 #logo {
 
 	float: left;
 	font-size: 280%;
 	margin-left: 30px;
-}
-
-#menu{
-font-size: 80%;
-list-style-type: none;
-letter-spacing: 4px;
+    padding-top: 20px;
+	padding-left: 0px;
+    padding-bottom: 20px;
 }
 
 #logo, #menu {
-	line-height: 75px;
+	line-height: 30px;
 }
 #menu li {
 	float: right;
@@ -66,4 +69,5 @@ h1{
         padding-bottom: 40px;
 	 position: absolute;
      float: left;
+     border-top: 40px;
  }
