--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Metal+Mania&family=Playfair+Display:wght@500&display=swap |Noto Serif 100, 200, 300, 400, 500, 600, 700');
 
-header {
+.header {
     margin: 0;
+    line-height: 20%;
 
 }
 #menu{
@@ -25,9 +26,6 @@ header {
     padding-bottom: 20px;
 }
 
-#logo, #menu {
-	line-height: 30px;
-}
 #menu li {
 	float: right;
 	margin-right: 20px;
@@ -58,7 +56,7 @@ h1{
      color: black;
 }
 
-.cover-text, #hero-image{
+.main-text, #hero-image{
 	 font-size: 100%;
 	 font-family: Noto Serif;
 	 color: #fff;
@@ -70,4 +68,12 @@ h1{
 	 position: absolute;
      float: left;
      border-top: 40px;
+     line-height: 60%;
  }
+.footer{
+    line-height: 20%;
+    padding-top: 20px;
+	padding-left: 10px;
+    padding-bottom: 20px;
+    padding-right: 20px;
+}
