--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,34 @@ h1{
      border-top: 40px;
      line-height: 60%;
  }
+.movies{
+    display: grid;
+  grid-gap: 5px;
+  background: url(https://thatsitla.com/wp-content/uploads/2013/02/movie-popcorn.png);
+  color: #fff;
+}
+.chat-rooms{
+    display: grid;
+  grid-gap: 5px;
+  background: url(https://st4.depositphotos.com/5934840/24323/v/1600/depositphotos_243236592-stock-illustration-coffee-shop-cartoon.jpg);
+  color:#777777;
+}
+.gamers{
+    display: grid;
+  grid-gap: 5px;
+  background: url(https://press.razer.com/wp-content/uploads/2020/01/Kishi-KV_R2-1024x861.jpg);
+  color: #fff;
+}
+.group-tours{
+    display: grid;
+  grid-gap: 5px;
+  background: url(https://cdn.vox-cdn.com/thumbor/ekczdrm-GRsCQjA8vXDxoMdI-GM=/0x0:3360x1862/1200x800/filters:focal(1412x663:1948x1199)/cdn.vox-cdn.com/uploads/chorus_image/image/63869075/Screen_Shot_2019_05_20_at_5.06.51_PM.0.png);
+color: #fff;}
+
+.sign-up{
+    background: url(https://cdn.vox-cdn.com/thumbor/ekczdrm-GRsCQjA8vXDxoMdI-GM=/0x0:3360x1862/1200x800/filters:focal(1412x663:1948x1199)/cdn.vox-cdn.com/uploads/chorus_image/image/63869075/Screen_Shot_2019_05_20_at_5.06.51_PM.0.png) no-repeat center center;
+color: #fff;}
+
 .footer{
     line-height: 20%;
     padding-top: 20px;
