--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Metal+Mania&family=Playfair+Display:wght@500&display=swap |Noto Serif 100, 200, 300, 400, 500, 600, 700');
 
-.header {
+header {
     margin: 0;
     line-height: 20%;
 
@@ -16,7 +16,16 @@
     padding-bottom: 20px;
     padding-right: 20px;
 }
-#logo {
+.logo {
+    color: black;
+    top: 0;
+    width: 100%;
+    height: 100px;
+    left: 0;
+    right: 0;
+}
+
+h1{
 
 	float: left;
 	font-size: 280%;
@@ -42,7 +51,7 @@ border-bottom: 1px solid #777777;
 }
 
 #hero-image{
-height: 1500px;
+height: 60%;
 width: 100%;
 background: url("http://notthetate.co.uk/stuartart/guidinglight.jpg")
 no-repeat center center; 
