--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Metal+Mania&family=Playfair+Display:wght@500&display=swap |Noto Serif 100, 200, 300, 400, 500, 600, 700');
 
-header {
+header{
     margin: 0;
     line-height: 20%;
 
@@ -9,12 +9,10 @@ header {
     float: left;
     position: absolute;
     list-style-type: none;
-    font-size: 80%;
+    font-size: 150%;
     letter-spacing: 4px;
-    padding-top: 20px;
-	padding-left: 10px;
-    padding-bottom: 20px;
-    padding-right: 20px;
+    margin-top: 50px;
+  
 }
 .logo {
     color: black;
@@ -97,7 +95,7 @@ h1{
   background: url(https://press.razer.com/wp-content/uploads/2020/01/Kishi-KV_R2-1024x861.jpg);
   color: #fff;
 }
-.group-tours{
+.tours{
     display: grid;
   grid-gap: 5px;
   background: url(https://cdn.vox-cdn.com/thumbor/ekczdrm-GRsCQjA8vXDxoMdI-GM=/0x0:3360x1862/1200x800/filters:focal(1412x663:1948x1199)/cdn.vox-cdn.com/uploads/chorus_image/image/63869075/Screen_Shot_2019_05_20_at_5.06.51_PM.0.png);
