--- a/css/style.css
+++ b/css/style.css
@@ -80,29 +80,29 @@ h1{
 .movies{
     display: grid;
   grid-gap: 5px;
-  background: url(https://thatsitla.com/wp-content/uploads/2013/02/movie-popcorn.png);
+  background: url(https://thatsitla.com/wp-content/uploads/2013/02/movie-popcorn.png) no-repeat;
   color: #fff;
 }
 .chat-rooms{
     display: grid;
   grid-gap: 5px;
-  background: url(https://st4.depositphotos.com/5934840/24323/v/1600/depositphotos_243236592-stock-illustration-coffee-shop-cartoon.jpg);
+  background: url(https://st4.depositphotos.com/5934840/24323/v/1600/depositphotos_243236592-stock-illustration-coffee-shop-cartoon.jpg) no-repeat;
   color:#777777;
 }
 .gamers{
     display: grid;
   grid-gap: 5px;
-  background: url(https://press.razer.com/wp-content/uploads/2020/01/Kishi-KV_R2-1024x861.jpg);
+  background: url(https://press.razer.com/wp-content/uploads/2020/01/Kishi-KV_R2-1024x861.jpg)no-repeat;
   color: #fff;
 }
 .tours{
     display: grid;
   grid-gap: 5px;
-  background: url(https://cdn.vox-cdn.com/thumbor/ekczdrm-GRsCQjA8vXDxoMdI-GM=/0x0:3360x1862/1200x800/filters:focal(1412x663:1948x1199)/cdn.vox-cdn.com/uploads/chorus_image/image/63869075/Screen_Shot_2019_05_20_at_5.06.51_PM.0.png);
+  background: url(https://i.pinimg.com/564x/0a/f4/9a/0af49acfe5fb435072109cf700d18b3a.jpg)no-repeat;
 color: #fff;}
 
 .sign-up{
-    background: url(https://cdn.vox-cdn.com/thumbor/ekczdrm-GRsCQjA8vXDxoMdI-GM=/0x0:3360x1862/1200x800/filters:focal(1412x663:1948x1199)/cdn.vox-cdn.com/uploads/chorus_image/image/63869075/Screen_Shot_2019_05_20_at_5.06.51_PM.0.png) no-repeat center center;
+    background: url(https://media.tacdn.com/media/attractions-splice-spp-674x446/07/17/6c/34.jpg) no-repeat center center;
 color: #fff;}
 
 .footer{
