--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ header{
     line-height: 20%;
 
 }
+
 #menu{
     float: left;
     position: absolute;
@@ -14,23 +15,16 @@ header{
     margin-top: 50px;
   
 }
-.logo {
+.logo, h1 {
     color: black;
-    top: 0;
-    width: 100%;
-    height: 100px;
-    left: 0;
-    right: 0;
-}
-
-h1{
-
-	float: left;
-	font-size: 280%;
-	margin-left: 30px;
-    padding-top: 20px;
-	padding-left: 0px;
-    padding-bottom: 20px;
+    font-size: 150%;
+    letter-spacing: 4px;
+    text-align: right;
+    clear: both;
+    display: inline-block;
+    overflow: hidden;
+    white-space: nowrap;
+    margin-top: 15px;
 }
 
 #menu li {
@@ -58,13 +52,15 @@ animation-duration: 5s;
 animation-fill-mode: forwards;
 background-size: cover;
 }
-h1{
+
+h2{
      letter-spacing: 4px;
-     color: black;
+     color: #fff;
+     font-size: 160%;
 }
 
-.main-text, #hero-image{
-	 font-size: 100%;
+.cover-text, #hero-image{
+	 font-size: 120%;
 	 font-family: Noto Serif;
 	 color: #fff;
 	width: 100%;
