--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Metal+Mania&family=Playfair+Display:wght@500&display=swap |Noto Serif 100, 200, 300, 400, 500, 600, 700');
 
+/*----------------------Main Headings & Header Links Section-------*/
 header{
     margin: 0;
     line-height: 20%;
@@ -7,33 +8,30 @@ header{
     width: 100%;
 
 }
-
-#menu{
-    float: left;
+.main-heading {
+margin: 0;
+margin-top: 20px;
+margin-bottom: 20px;
+padding-right: 5px;
+font-family: "Metal Mania", sans-serif;
+font-weight: 500;
+font-size: 20px;
+position: absolute;
+text-align: left;
+letter-spacing: 4px;
+display: inline-block;
+color: black;
+white-space: nowrap;
+}
+.header-links{
     position: absolute;
     list-style-type: none;
-    font-size: 150%;
-    letter-spacing: 4px;
-    margin-top: 50px;
+    font-size: 15px;;
+    letter-spacing: 2px;
+    margin-top: 20px;
     text-align: right;
-    padding-left: 50px;
+    padding-right: 5px;
     display: inline-block;
-
-  
-}
-.logo, h1 {
-    color: black;
-    font-size: 150%;
-    letter-spacing: 4px;
-    text-align: left;
-    display: inline-block;
-    overflow: hidden;
-    white-space: nowrap;
-    margin-top: 15px;
-    float: right;
-    padding-right: 50px;
-    display: inline-block;
-    
 }
 
 #menu li {
