--- a/css/style.css
+++ b/css/style.css
@@ -102,19 +102,19 @@ position: relative
 	margin-left: 5px;
      position: absolute;
  }
-/#activities{
-  background-image: url("https://i.redd.it/8iljphu63ep21.jpg");
+#activities{
+  background-image: url("https://media1.s-nbcnews.com/j/newscms/2019_13/2459586/180608-aliens-fermi-paradox-ac-515p_3ed014cab156ff9319f4d52ee5242b89.fit-760w.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+width:100%;
   overflow: hidden;
+max-height: 50%;
 
 }
 
 #activities div{
   color: #fafafa;
-  background-color: rgba(0, 0,0, .6);
-  width: 19%;
+  width: 100%;
   height: 300px;
   float: left;
   padding: 30px 0 0 10px;
@@ -125,6 +125,7 @@ position: relative
 
 #activities h2 {
   color: #fafafa;
+  }
 
 
 /*----------------------SIGN UP PAGE-------*/
